--- a/afo_display/galleria/themes/azur/galleria.azur.css
+++ b/afo_display/galleria/themes/azur/galleria.azur.css
@@ -189,24 +189,13 @@ body .galleria-tooltip {
 }
 
 .galleria-info {
-
-/*
     position: absolute;
-/*  overflow: hidden;
+/*  overflow: hidden;*/
     left: 0;
     right: 0;
-    bottom: -160; 
+    bottom: -160; /*dev*/
     color: #000;
     z-index:2;
-	*/
-	
-	bottom: -114px;
-    color: #000000;
-    left: 0;
-    position: absolute;
-    right: 0;
-    z-index: 2;
-	
 }
 
 .galleria-info.toggler {
@@ -351,7 +340,3 @@ body .galleria-tooltip {
     right: 28px;
     left: 28px;
 } 
-
-div.galleria-counter {
-	display:none !important;
-	}
